# smart-glove

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md
main/: CMakeLists.txt  Kconfig.projbuild  config.hpp  idf_component.yml  imus.hpp  main.cpp  middleware.hpp  udp.cpp  udp.hpp  utils.hpp
main/include/: config.hpp  imus.hpp  middleware.hpp  new_wifi.hpp  websockets.hpp
main/src/: main.cpp  middleware.cpp  wifi.cpp
